Bug 1731165 - Invalidate the right frame from nsCaret::SchedulePaint when we paint the caret from the containing block. r=miko

Not sure how easy it is to come up with a test-case for this, will try
though.

Differential Revision: https://phabricator.services.mozilla.com/D126615